--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "elevantor_vietphat",
   "version": "1.0.0",
   "description": "thang may viet phat",
-  "main": "resources/app.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "beautifull": "lint-staged",
-    "watch": "node-sass --watch src/resources/scss/app.scss src/public/css/app.css",
-    "start": "nodemon --inspect src/server.js"
+    "watch": "sass --watch src/resources/scss/app.scss src/public/css/app.css",
+    "start": "nodemon --inspect src/app.js"
   },
   "repository": {
     "type": "git",
