--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/HungRubi/elevantor_vietphat#readme",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1"
   },
