--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
-    "express-handlebars": "^8.0.1"
+    "express-handlebars": "^8.0.1",
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "husky": "^9.1.7",
