--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "sass": "^1.81.1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
@@ -35,7 +36,6 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "nodemon": "^3.1.7",
-    "prettier": "^3.4.1",
-    "sass": "^1.81.1"
+    "prettier": "^3.4.1"
   }
 }
